# 3d-file-toolkit

./: .gitignore  3dft  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: AGENTS.md
scripts/: _3mf_reader.py  _formats.py  _raster.py  compat.py  convert.py  edit_metadata.py  info.py  merge.py  render.py  simplify.py  split.py  transform.py
tests/: test_scripts.py
tests/fixtures/: benchy.3mf  build_fixtures.py  cube.stl  cube_external.3mf  cube_flat.3mf
toolkit/: __init__.py  cli.py
